10/28/09 fix positioning of sandwich image on rhs of formula
10/28/09 use darker fill color for histogram bars
# 0.00.09 (35970) Oct 21, 2009
10/21/09 same as version 0.00.08, but replace sliders with spinners
# 0.00.08 (35968) Oct 21, 2009
10/21/09 dev version with change requests
10/21/09 switch between spinners or sliders for quantity controls
10/21/09 3D-looking slider knob from Noah P.
10/21/09 hide product histogram under After box when formula is not a reaction
10/21/09 move quantity slider knob to right of track
10/21/09 default all sandwich coefficients to zero
10/21/09 add "leftovers" label under After box
10/21/09 move products display to left
10/21/09 show "no reaction" on rhs when formula does not result in a reaction
10/21/09 add SandwichFormula.isReaction
10/21/09 delete LeftoversDisplayNode, no longer needed
10/21/09 increase meat image size to 203x100 so that it sticks out of bread
10/21/09 increase vertical spacing between sandwich parts to 7
# 0.00.07 (35929) Oct 19, 2009
10/19/09 more than 2 reactants or at least 1 reactant with coefficient >= 2 is required to create a product
# 0.00.06 (35924) Oct 19, 2009
10/19/09 make vertical stacks of items in Sandwich Shop, instead of random placement
10/19/09 control for selecting "real reaction" type
# 0.00.05 (35877) Oct 14, 2009
10/14/09 increase cheese image to 245x120 so that it's visible between slices of bread
10/14/09 algorithm to create a convincing-looking sandwich image based on formula
10/13/09 scale and import the molecule images that Kelly provided
# 0.00.04 (35823) Oct 13, 2009
10/13/09 demo sliders/historgrams below Before & After boxes
10/13/09 support for up/down arrows in reactant quantity text fields
10/13/09 bar + value display for products and leftovers
10/13/09 proper handling of out-of-range values in spinners and text fields
10/13/09 textfield + custom slider for setting reactant quantities
# 0.00.03 (35778) Oct 13, 2009